Another time to rewrite profile CBV

--- a/systemapps/account/templates/profile.html
+++ b/systemapps/account/templates/profile.html
@@ -252,14 +252,14 @@
     {% if phonechangeform.errors %}
         <script>
             jQuery(function ($) {
-                $("#modalEditPhone").modal("show");
+                $("#id-modal-editphone").modal("show");
             });
         </script>
     {% endif %}
     {% if sendownerrequestform.errors %}
         <script>
             jQuery(function ($) {
-                $("#modalOwnerRequest").modal("show");
+                $("#id-modal-ownerrequest").modal("show");
             });
         </script>
     {% endif %}
