--- a/templates/base.html
+++ b/templates/base.html
@@ -312,6 +312,7 @@
 ============================================= -->
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/functions.js' %}"></script>
+<script src="{% static 'js/common.js' %}"></script>
 {% if messages %}
     <script>
         $(window).on("load", function () {
